(AutoWrapper) Used Constructor instances for .newInstance() and added .setAccessible(true) in the unwrap function to fix private constructor problems.